--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,8 @@
 $grey: #C9C9C9;
 $dark-grey: #333333;
+$middle-grey: #eee;
 $blue: #337ab7;
 $white: #fff;
 $black: #000;
 $light-grey: #f7f7f7;
+$red: #ee0000;
