--- a/src/scss/development.scss
+++ b/src/scss/development.scss
@@ -1,7 +1,40 @@
 .development {
   height: 570px;
   background-color: $white;
+  text-align: center;
+  h2 {
+    font-weight: 500;
+    margin-top: 0;
+    padding-top: 50px;
+  }
   &__content {
     display: flex;
+    margin: 0 -17px;
+  }
+
+  &__block {
+    max-width: 360px;
+    text-align: center;
+    margin: 0 17px;
+  }
+  &__image {
+    max-width: 85px;
+    margin: 0 auto;
+  }
+
+  &__text {
+    padding-top: 36px;
+    border-top: 2px solid $blue;
+  }
+
+  @include breakpoint(desktop) {
+    &__content {
+      margin: 0 -6px;
+    }
+    &__block {
+      max-width: 310px;
+      margin: 0 6px;
+    }
   }
 }
+
