--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -5,7 +5,8 @@ $breakpoints: (
         phablet: "600px",
         tablet: "768px",
         laptop: "1024px",
-        desktop: "1280px"
+        desktop: "1280px",
+        slider: "850px"
 ) !default;
 
 @mixin breakpoint($breakpoint) {
