--- a/src/scss/content-left.scss
+++ b/src/scss/content-left.scss
@@ -23,8 +23,9 @@
   }
 
   @include breakpoint(laptop) {
+    padding: 0 30px;
     h2 {
-      font-size: 26px;
+      font-size: 24px;
     }
     p {
       padding: 0 15px;
