--- a/src/scss/development.scss
+++ b/src/scss/development.scss
@@ -6,6 +6,7 @@
     font-weight: 500;
     margin-top: 0;
     padding-top: 50px;
+    margin-bottom: 24px;
   }
   &__content {
     display: flex;
@@ -16,6 +17,10 @@
     max-width: 360px;
     text-align: center;
     margin: 0 17px;
+    h4 {
+      font-weight: 500;
+      font-size: 20px;
+    }
   }
   &__image {
     max-width: 85px;
@@ -24,6 +29,7 @@
 
   &__text {
     padding-top: 36px;
+    font-size: 16px;
     border-top: 2px solid $blue;
   }
 
@@ -34,6 +40,59 @@
     &__block {
       max-width: 310px;
       margin: 0 6px;
+    }
+  }
+
+  @include breakpoint(laptop) {
+    h4 {
+      font-size: 18px;
+    }
+    &__block {
+      max-width: 230px;
+    }
+    &__text {
+      font-size: 14px;
+    }
+  }
+
+  @include breakpoint(slider) {
+    margin: 0 -6.5px;
+    h4 {
+      font-size: 20px;
+    }
+    &__block {
+      margin: 0 6.5px;
+      max-width: 360px;
+    }
+    &__text {
+      font-size: 16px;
+    }
+  }
+
+  @include breakpoint(tablet) {
+    &__block {
+      max-width: 272px;
+    }
+  }
+
+  @include breakpoint(phablet) {
+    margin: 0 -16px;
+    &__block {
+      margin: 0 16px;
+      max-width: 420px;
+    }
+    &__text {
+      margin-bottom: 30px;
+    }
+  }
+  @include breakpoint(largePhone) {
+    h4 {
+      margin-bottom: 10px;
+    }
+    &__text {
+      font-size: 14px;
+      padding-top: 24px;
+      margin-bottom: 50px;
     }
   }
 }
