--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -114,6 +114,7 @@
         }
       }
     &__links-button {
+      max-width: 550px;
       display: none;
       &.show {
         display: flex;
@@ -146,6 +147,15 @@
   }
 
   @include breakpoint(largePhone) {
+    &__links-button {
+      max-width: 280px;
+    }
+    &__links {
+      max-width: 280px;
+    }
+    &__button {
+      max-width: 280px;
+    }
     &__links {
       ol {
         width: 280px;
