--- a/src/scss/content-left.scss
+++ b/src/scss/content-left.scss
@@ -1,21 +1,21 @@
 .content-left {
-  height: 640px;
+  height: 720px;
   align-content: center;
   text-align: center;
-  width: 50%;
+  width: 47.5%;
   padding: 0 40px;
   h2 {
     color: $dark-grey;
     font-weight: 600;
-    font-size: 32px;
+    font-size: 30px;
   }
 
   p {
     color: $dark-grey;
     padding: 0 20px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 300;
-    letter-spacing: 1.5px;
+    line-height: 30px;
   }
 
   @include breakpoint(desktop) {
@@ -25,32 +25,40 @@
   }
 
   @include breakpoint(laptop) {
+    height: 700px;
+    padding-left: 10px;
+    width: 55%;
     h2 {
       font-size: 26px;
     }
     p {
+      font-size: 14px;
       padding: 0 15px;
     }
   }
 
   @include breakpoint(tablet) {
-    height: 450px;
+    padding-top: 30px;
+    height: 500px;
     width: 100%;
     h2 {
       font-size: 32px;
     }
     p {
-      font-size: 16px;
+      font-size: 20px;
     }
   }
 
   @include breakpoint(phablet) {
-    height: 450px;
-    padding: 0 20px;
+    height: 490px;
+    padding: 14px 20px 0;
+    p {
+      font-size: 18px;
+    }
   }
 
   @include breakpoint(largePhone) {
-    height: 300px;
+    height: 500px;
     padding: 0;
     h2 {
       font-size: 22px;
