--- a/src/scss/registration.scss
+++ b/src/scss/registration.scss
@@ -1,28 +1,34 @@
 .registration {
   display: flex;
   justify-content: center;
-  height: 700px;
-  width: 590px;
+  height: 670px;
+  width: 600px;
   flex-direction: column;
+  margin-left: auto;
+  margin-right: 0;
   h3 {
+    color: $dark-grey;
     font-weight: 500;
     margin-bottom: 4px;
+    font-size: 20px;
     margin-top: 0;
   }
   &__step {
     display: flex;
     flex-direction: column;
     label {
-      font-size: 12px;
-      margin-top: 12px;
-      margin-bottom: 10px;
+      color: $dark-grey;
+      font-size: 14px;
+      line-height: 30px;
+      margin-top: 5px;
+      margin-bottom: 5px;
     }
     label::after {
       content: '*';
       color: $red;
     }
     input {
-      font-size: 12px;
+      font-size: 14px;
       padding: 10px;
       border-radius: 5px;
       border: 2px solid $grey;
@@ -121,24 +127,26 @@
   }
 
   @include breakpoint(laptop) {
-    width: 360px;
+    width: 320px;
     &__button {
       button {
-        padding: 16px 70px;
+        padding: 16px 59px;
       }
     }
   }
 
   @include breakpoint(tablet) {
+    height: 700px;
     h3 {
       text-align: center;
       font-size: 32px;
     }
     label {
-      font-size: 14px;
+      font-size: 16px;
+      line-height: 28px;
     }
     input {
-      font-size: 14px;
+      font-size: 16px;
     }
     width: 100%;
   }
@@ -146,6 +154,9 @@
   @include breakpoint(largePhone) {
     h3 {
       font-size: 20px;
+    }
+    label {
+      margin-top: 8px;
     }
     &__button {
       button {
