--- a/src/scss/development.scss
+++ b/src/scss/development.scss
@@ -64,7 +64,7 @@
       font-size: 20px;
     }
     &__block {
-      margin: 0 10.3px;
+      margin: 0 10.3px 30px;
       max-width: 360px;
     }
     &__text {
