--- a/src/scss/development.scss
+++ b/src/scss/development.scss
@@ -4,19 +4,20 @@
   text-align: center;
   h2 {
     font-weight: 500;
+    font-size: 30px;
     margin-top: 0;
     padding-top: 50px;
-    margin-bottom: 24px;
+    margin-bottom: 28px;
   }
   &__content {
     display: flex;
-    margin: 0 -17px;
+    margin: 0 -34px;
   }
 
   &__block {
-    max-width: 360px;
+    max-width: 346px;
     text-align: center;
-    margin: 0 17px;
+    margin: 0 34px;
     h4 {
       font-weight: 500;
       font-size: 20px;
@@ -28,18 +29,20 @@
   }
 
   &__text {
-    padding-top: 36px;
+    padding-top: 32px;
     font-size: 16px;
+    line-height: 24px;
+    font-weight: 300;
     border-top: 2px solid $blue;
   }
 
   @include breakpoint(desktop) {
     &__content {
-      margin: 0 -6px;
+      margin: 0 -13px;
     }
     &__block {
-      max-width: 310px;
-      margin: 0 6px;
+      max-width: 300px;
+      margin: 0 13px;
     }
   }
 
@@ -56,12 +59,12 @@
   }
 
   @include breakpoint(slider) {
-    margin: 0 -6.5px;
+    margin: 0 -10.3px;
     h4 {
       font-size: 20px;
     }
     &__block {
-      margin: 0 6.5px;
+      margin: 0 10.3px 30px;
       max-width: 360px;
     }
     &__text {
@@ -76,9 +79,9 @@
   }
 
   @include breakpoint(phablet) {
-    margin: 0 -16px;
+    margin: 0 -23px;
     &__block {
-      margin: 0 16px;
+      margin: 0 23px;
       max-width: 420px;
     }
     &__text {
@@ -86,6 +89,9 @@
     }
   }
   @include breakpoint(largePhone) {
+    h2 {
+      font-size: 24px;
+    }
     h4 {
       margin-bottom: 10px;
     }
