--- a/src/scss/testimonials.scss
+++ b/src/scss/testimonials.scss
@@ -1,42 +1,107 @@
 .testimonials {
   background-color: $white;
   text-align: center;
-  padding-top: 80px;
+  padding-top: 70px;
+  height: 450px;
+  >.container {
+    max-width: 700px;
+  }
   h2 {
     margin: 0;
     font-weight: 500;
   }
 
   &__content {
-    >.slick-track {
-      max-width: 890px !important;
-    }
+    margin: 0 -250px;
+    padding-bottom: 80px;
   }
   &__block {
     max-width: 700px;
-    margin: 0 auto;
+    margin: 0 250px;
+    padding: 14px 0;
   }
   &__message {
     p {
       color: $dark-white;
+      font-size: 16px;
+      line-height: 26px;
     }
-    //&::before{
-    //  content: '“';
-    //  font-size: 4em;
-    //  color: $black;
-    //  position: absolute;
-    //  font-family: serif;
-    //  //top: -10px;
-    //  left: 10px;
-    //}
-    //&::after {
-    //  content: '”';
-    //  font-size: 4em;
-    //  color: $black;
-    //  position: absolute;
-    //  font-family: serif;
-    //  //bottom: -10px;
-    //  //right: -10px;
-    //}
+    &::before{
+      content: '“';
+      font-size: 4em;
+      color: $grey;
+      position: absolute;
+      font-family: "Oswald", sans-serif;
+      font-weight: bold;
+      top: 0;
+      left: -30px;
+    }
+    &::after {
+      content: '”';
+      font-size: 4em;
+      color: $grey;
+      position: absolute;
+      font-family: "Oswald", sans-serif;
+      font-weight: bold;
+      bottom: 50px;
+      right: -20px;
+    }
+  }
+  h5 {
+    font-weight: 600;
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+  &__role {
+    margin-top: 5px;
+    font-style: italic;
+  }
+
+  @include breakpoint(desktop) {
+    height: 420px;
+    &__content {
+      padding-bottom: 50px;
+    }
+  }
+
+  @include breakpoint(tablet) {
+    >.container {
+      max-width: 560px;
+    }
+    &__content {
+      margin: 0 -200px;
+    }
+    &__block {
+      margin: 0 200px;
+      max-width: 560px;
+    }
+  }
+
+  @include breakpoint(phablet) {
+    >.container {
+      max-width: 430px;
+    }
+    &__content {
+      margin: 0 -190px;
+    }
+    &__block {
+      margin: 0 200px;
+      max-width: 430px;
+    }
+  }
+
+  @include breakpoint(largePhone) {
+    >.container {
+      max-width: 280px;
+    }
+    &__block {
+      max-width: 280px;
+    }
+
+    &__message {
+      p {
+        font-size: 14px;
+      }
+    }
   }
 }
