--- a/src/scss/mentors.scss
+++ b/src/scss/mentors.scss
@@ -23,4 +23,47 @@
     font-weight: 300;
     max-width: 680px;
   }
+
+  @include breakpoint(laptop) {
+    &__block {
+      flex-direction: column;
+      h3 {
+        font-size: 24px;
+      }
+    }
+    &__text {
+      max-width: 736px;
+    }
+  }
+
+  @include breakpoint(tablet) {
+    &__block {
+      text-align: center;
+      h3 {
+        margin-bottom: 24px;
+      }
+    }
+    &__image {
+      margin: 0 auto;
+    }
+  }
+
+  @include breakpoint(largePhone) {
+    &__image {
+      img {
+        width: 150px;
+      }
+    }
+    h3 {
+      font-size: 20px;
+    }
+    &__text {
+      font-size: 14px;
+      p {
+        &:last-child {
+          letter-spacing: -0.2px;
+        }
+      }
+    }
+  }
 }
