--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,6 +1,9 @@
+/* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+/*For quote marks in testimonials*/
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
+/* Set default font family */
 * {
   font-family: "Open Sans", sans-serif;
 }
